Bug 78313 - FILEOPEN: RTF - Font colors not retained
Summary: FILEOPEN: RTF - Font colors not retained
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.3.3 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.2.5
Keywords: regression
: 78331 (view as bug list)
Depends on:
Blocks: RTF-Character
  Show dependency treegraph
 
Reported: 2014-05-05 21:50 UTC by Yousuf Philips (jay) (retired)
Modified: 2017-09-29 18:51 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
shows how it looks before saving the file and after opening it, please only focus on the color change (55.31 KB, image/jpeg)
2014-05-05 21:50 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-05-05 21:50:05 UTC
Created attachment 98518 [details]
shows how it looks before saving the file and after opening it, please only focus on the color change

I downloaded the .docx file found at < http://download.microsoft.com/documents/customerevidence/Files/710000003670/Xiamen_Tungsten_Group_unifies_enterprise.docx > and opened it in LibO and then saved it as a rtf file. Then i reopened the saved file and the font colors arent retained as the second line is supposed to be blue and the third line is supposed to be grey. This is a regression in only the 4.2 and word 2010 opened the rtf file with colors intact.

This is the color bug mentioned in bug 77979.
Comment 1 tommy27 2014-05-05 22:03:18 UTC
regression confirmed under Win7x64 using 4.2.3.3
looks good in 4.1.5.3

it's a FILEOPEN issue since the .rtf saved in 4.2.x look good in 4.1.x

@Jay
moved "regression" from summary notes to keywords which is the right place.
Comment 2 Andras Timar 2014-05-06 09:30:13 UTC
It also looks good in master Version: 4.3.0.0.alpha1+
Build ID: 74bb3cf5a9c768ae1e21e8469127e01f1aac67dd
Comment 3 tommy27 2014-05-06 10:43:12 UTC
*** Bug 78331 has been marked as a duplicate of this bug. ***
Comment 4 Miklos Vajna 2014-05-11 19:51:23 UTC
I'll take care of this.
Comment 5 Miklos Vajna 2014-05-11 19:58:42 UTC
-4-2 review: https://gerrit.libreoffice.org/9316
Comment 6 Commit Notification 2014-05-15 11:46:34 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c0fee7f70f4c7d97cd911c987d0b6dd57c6795e5&h=libreoffice-4-2

fdo#78313 RTF import: retain font colors


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Robinson Tryon (qubit) 2015-12-17 08:01:06 UTC Comment hidden (obsolete)