fdo#78313 RTF import: retain font colors

This is a cherry-pick of two master commits:

RTFValue::equals: consider the number of attributes/sprms as well

(cherry picked from commit 4452fa9a2e741834a19c9b322fc8d9c8b06450de)

Related: fdo#77600 RTF import: RTFValue::equals: compare attribute content

Previously only the number of nested sprms / attributes was compared.
With this, the font of the bugdoc is correctly Arial, not Times.

(cherry picked from commit 8e8f9388c323ad3c32cef3f91609ad19386b7d56)

Conflicts:
	writerfilter/source/rtftok/rtfsprm.hxx

Change-Id: I351de414b6734336b31c1334dbd2349072f16002
Reviewed-on: https://gerrit.libreoffice.org/9316
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>