writerfilter/source/rtftok/rtfsprm.hxx
@@ -60,6 +60,7 @@ namespace writerfilter {
             Iterator_t begin() { return m_pSprms->begin(); }
             Iterator_t end() { return m_pSprms->end(); }
             void clear();
+            bool equals(RTFValue& rOther);
         private:
             void ensureCopyBeforeWrite();
             boost::intrusive_ptr<RTFSprmsImpl> m_pSprms;
